--- a/styles/global.scss
+++ b/styles/global.scss
@@ -8,7 +8,7 @@ html {
 }
 
 body {
-    background: #eee;
+    background: url("../public/static/img/Miami-beach.jpg") no-repeat center center fixed;
 }
 
 /* Sticky footer */
@@ -65,6 +65,13 @@ main {
     margin: 0 auto;
 }
 
+.panel {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: $spacing-xs;
+}
+
 @media (min-width: $breakpoint-mobile) {
 }
 
@@ -76,6 +83,10 @@ main {
 
     .container {
         width: $content-max-width;
+    }
+
+    .panel {
+        flex-direction: row;
     }
 }
 
