--- a/styles/global.scss
+++ b/styles/global.scss
@@ -65,11 +65,22 @@ main {
     margin: 0 auto;
 }
 
-.panel {
+.panel-center {
+    margin: 0 auto;
+}
+
+.panel-flex {
     display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
     align-items: center;
     gap: $spacing-xs;
+}
+
+.paragraph-focus {
+    text-align: center;
+    font-size: $font-size-s;
+    margin: $spacing-s;
 }
 
 @media (min-width: $breakpoint-mobile) {
