Footer and menu layout and spacing improvements

--- a/styles/header.scss
+++ b/styles/header.scss
@@ -42,6 +42,7 @@ header > nav {
 
 .menu-toggle {
     cursor: pointer;
+    font-size: $font-size-m;
     padding: $spacing-s;
     position: relative;
     user-select: none;
