--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -91,7 +91,7 @@ $footer-content-max-width: 1200px;
 $color-header: #13c9d2;
 $color-mobile-menu-background: $color-grey-dark;
 $color-mobile-menu-link-bg-hover: lighten($color-grey-dark, 10%);
-$color-mobile-menu-link: $color-grey-light;
+$color-mobile-menu-link: $color-white;
 
 $color-menu-link: $color-grey-dark;
 $color-menu-link-bg-hover: $color-white;
