--- a/styles/global.scss
+++ b/styles/global.scss
@@ -59,7 +59,6 @@ main {
 }
 
 .container {
-    padding: $spacing-m;
     background: $color-background;
     width: 100%;
     margin: 0 auto;
@@ -81,6 +80,23 @@ main {
     text-align: center;
     font-size: $font-size-s;
     margin: $spacing-s;
+}
+
+section {
+    padding: $spacing-m;
+}
+
+.section__indent {
+    margin-left: $spacing-m;
+}
+
+.section--dark {
+    background: $color-grey-extra-dark;
+    color: $color-white;
+}
+
+.section--news {
+    background: url("../public/static/img/paper-texture.jpg") no-repeat center center;
 }
 
 @media (min-width: $breakpoint-mobile) {
