Try to fix font loading

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,5 +1,4 @@
-/** Import fonts here **/
-@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,500;1,100;1,300&display=swap");
+/** Import fonts in `_app.jsx` head **/
 
 /* constants */
 $header-height: 118px;
