--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -24,6 +24,7 @@ $color-white: #fff;
 $color-grey-light: #bebebe;
 $color-grey-med: #ccc;
 $color-grey-extra-dark: #222;
+$color-grey-extra-dark-translucent: rgba(0, 0, 0, 0.5);
 $color-grey-dark: #333;
 $color-black: #000;
 $color-blue: #056ce3;
