Add featured image, fix build

--- a/styles/posts.scss
+++ b/styles/posts.scss
@@ -19,3 +19,13 @@
 .post_home-footer {
     margin-top: 20px;
 }
+
+.post__featured-image {
+    width: 34%;
+    float: left;
+}
+
+/** homepage latest post for now **/
+.featured-image--sm {
+    width: 26%;
+}
