Small styling error

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -127,8 +127,7 @@ section {
 
     .paragraph-focus {
         background: rgba($color: #000000, $alpha: 0.5);
-        padding-top: $spacing-m;
-        padding-bottom: $spacing-m;
+        padding: $spacing-m;
     }
 }
 
