--- a/styles/pages.scss
+++ b/styles/pages.scss
@@ -17,6 +17,17 @@
     width: 60px;
 }
 
+.video-embed {
+    padding: $spacing-m;
+    display: flex;
+    justify-content: center;
+}
+
+.video-embed iframe {
+    width: 270px;
+    height: 170px;
+}
+
 @media (min-width: $breakpoint-mobile) {
     .image__polaroid {
         flex-basis: 200px;
@@ -31,11 +42,21 @@
     .icon-social.music__small {
         width: 76px;
     }
+
+    .video-embed iframe {
+        width: 460px;
+        height: 259px;
+    }
 }
 
 @media (min-width: $breakpoint-tablet) {
     .music-locations {
         gap: $spacing-xxl;
+    }
+
+    .video-embed iframe {
+        width: 560px;
+        height: 315px;
     }
 }
 
